--- a/data/www/html/stacks.html
+++ b/data/www/html/stacks.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Update-PortainerStacks</title>
+    <title>Whale Mate</title>
     <!-- Bootstrap 5 CDN -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- FontAwesome -->
@@ -34,7 +34,7 @@
             <!-- Logo -->
             <a class="navbar-brand" href="stacks.html">
                 <i class="fas fa-ship me-2 text-primary"></i>
-                <span class="fw-bold">Update-PortainerStacks</span>
+                <span class="fw-bold">Whale Mate</span>
             </a>
 
             <!-- Toggler for mobile -->
@@ -66,7 +66,7 @@
     <div class="container py-4">
         <h2 class="mb-4 text-center">📦 Portainer Stacks</h2>
 
-        <!-- Stacks Table -->
+        <!-- Portainer Stacks Table -->
         <div class="card bg-dark border-light mb-5">
             <div class="card-body">
                 <table class="table table-dark table-striped table-hover mb-0">
@@ -83,6 +83,32 @@
                     <tbody id="stacks-table">
                         <tr>
                             <td colspan="5" class="text-center py-5">Loading stacks data...</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+        </div>
+    </div>
+    <div class="container py-4">
+        <h2 class="mb-4 text-center"><i class="fas fa-ship me-2 text-primary"></i> Docker Stacks</h2>
+
+        <!-- Docker Stacks Table -->
+        <div class="card bg-dark border-light mb-5">
+            <div class="card-body">
+                <table class="table table-dark table-striped table-hover mb-0">
+                    <thead class="table-secondary text-dark">
+                        <tr>
+                            <th>Stack</th>
+                            <th>Update Status</th>
+                            <th>Update Policy</th>
+                            <th>Last Updated</th>
+                            <th>Created</th>
+                            <th>Stack Status</th>
+                        </tr>
+                    </thead>
+                    <tbody id="stacks-table">
+                        <tr>
+                            <td colspan="6" class="text-center py-6">Loading stacks data...</td>
                         </tr>
                     </tbody>
                 </table>
