added docker cli + renaming portainer stack stuff + nicer output when portinaer is not given

--- a/data/www/html/stacks.html
+++ b/data/www/html/stacks.html
@@ -277,7 +277,7 @@
         `;
 
                 // Get stacks data
-                const response = await fetch('/api/stacks');
+                const response = await fetch('/api/portainer/stacks');
                 const data = await response.json();
 
                 if (!data.success) {
