--- a/data/www/html/stacks.html
+++ b/data/www/html/stacks.html
@@ -296,8 +296,8 @@
         `).join('');
                 document.getElementById('portainer-stacks-table').innerHTML = tableHTML;
                 // Configure throttling (adjust these values!)
-                const REQUEST_DELAY_MS = 500;  // Delay between requests
-                const MAX_CONCURRENT_REQUESTS = 1;  // Only 1 at a time for serial execution
+                const REQUEST_DELAY_MS = 20;  // Delay between requests
+                const MAX_CONCURRENT_REQUESTS = 2;  // Only 1 at a time for serial execution
                 // Process status updates one-by-one with delay
                 for (let i = 0; i < data.data.length; i++) {
                     const stack = data.data[i];
@@ -324,6 +324,20 @@
             </td></tr>`;
             }
         }
+        // Function to fetch Docker Compose update status for all stacks
+        async function fetchDockerUpdateStatus() {
+            try {
+                const response = await fetch('/api/docker-compose/stack-update-status');
+                const data = await response.json();
+                if (!data.success) {
+                    throw new Error(data.error || 'Failed to fetch Docker Compose update status');
+                }
+                return data.data.stacks;
+            } catch (error) {
+                console.error('Error fetching Docker Compose update status:', error);
+                return [];
+            }
+        }
         // Load Docker Compose stacks data
         async function loadDockerStacks() {
             try {
@@ -343,20 +357,55 @@
                 </td></tr>`;
                     return;
                 }
-                // Create table for Docker Compose stacks
-                const tableHTML = stacks.map(stack => `
-            <tr class="align-middle">
-                <td><strong>${stack.Name}</strong></td>
-                <td>
-                ${getUpdateBadge()} <!-- Loading badge as placeholder until update status is implemented -->
-                </td>
-                <td>${stack.UpdatePolicy || 'N/A'}</td>
-                <td style="max-width: 300px; overflow: hidden; text-overflow: ellipsis; white-space: nowrap;" title="${stack.ConfigFiles || 'N/A'}">
-                    ${stack.ConfigFiles || 'N/A'}
-                </td>
-                <td>${getDockerStatusBadge(stack.Status)}</td>
-            </tr>
-        `).join('');
+                // Fetch update status for all Docker Compose stacks
+                const updateStatuses = await fetchDockerUpdateStatus();
+                // Create a map of update status by stack name for quick lookup
+                const updateStatusMap = {};
+                updateStatuses.forEach(status => {
+                    updateStatusMap[status.name] = status;
+                });
+                // Create table for Docker Compose stacks with update status
+                const tableHTML = stacks.map(stack => {
+                    const updateStatus = updateStatusMap[stack.Name] || null;
+                    let statusLabel = 'Unknown';
+                    let statusMessage = '';
+                    if (updateStatus) {
+                        // Check if outdated array has items and they are not just empty strings
+                        if (updateStatus.outdated && updateStatus.outdated.length > 0 && updateStatus.outdated.some(item => item.trim() !== "")) {
+                            statusLabel = 'Outdated';
+                            statusMessage = `Outdated components: ${updateStatus.outdated.filter(item => item.trim() !== "").join(', ')}`;
+                        }
+                        // Check if up_to_date array has items and they are not just empty strings
+                        else if (updateStatus.up_to_date && updateStatus.up_to_date.length > 0 && updateStatus.up_to_date.some(item => item.trim() !== "")) {
+                            statusLabel = 'Updated';
+                            statusMessage = `Up-to-date components: ${updateStatus.up_to_date.filter(item => item.trim() !== "").join(', ')}`;
+                        }
+                        // Check if errored array has items and they are not just empty strings
+                        else if (updateStatus.errored && updateStatus.errored.length > 0 && updateStatus.errored.some(item => item.trim() !== "")) {
+                            statusLabel = 'Error';
+                            statusMessage = `Errored components: ${updateStatus.errored.filter(item => item.trim() !== "").join(', ')}`;
+                        }
+                        // If all arrays are empty or contain only empty strings, consider it Unknown or a default state
+                        else {
+                            statusLabel = 'Unknown';
+                            statusMessage = 'No status information available';
+                        }
+                    }
+                    const formattedUpdateStatus = updateStatus ? { Status: statusLabel, Message: statusMessage } : null;
+                    return `
+                        <tr class="align-middle">
+                            <td><strong>${stack.Name}</strong></td>
+                            <td>
+                                ${getUpdateBadge(formattedUpdateStatus)} <!-- Display update status with badge -->
+                            </td>
+                            <td>${stack.UpdatePolicy || 'N/A'}</td>
+                            <td style="max-width: 300px; overflow: hidden; text-overflow: ellipsis; white-space: nowrap;" title="${stack.ConfigFiles || 'N/A'}">
+                                ${stack.ConfigFiles || 'N/A'}
+                            </td>
+                            <td>${getDockerStatusBadge(stack.Status)}</td>
+                        </tr>
+                    `;
+                }).join('');
                 document.getElementById('docker-stacks-table').innerHTML = tableHTML;
             } catch (error) {
                 console.error('Error fetching Docker Compose stacks:', error);
