--- a/data/www/html/stacks.html
+++ b/data/www/html/stacks.html
@@ -1,28 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Whale Mate</title>
+    <title>Whale Mate - Stacks</title>
     <!-- Bootstrap 5 CDN -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- FontAwesome -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" rel="stylesheet">
     <style>
-        .theme-switch {
-            padding: 0.4rem 0.75rem;
-            border-radius: 0.25rem;
-            cursor: pointer;
-            transition: all 0.2s ease-in-out;
+        :root {
+            --empty-state-bg: rgba(30, 30, 30, 0.5);
         }
-        .theme-switch:hover {
-            background-color: rgba(255, 255, 255, 0.1);
+
+        body {
+            background-color: #1a1a1a;
+            color: #e0e0e0;
         }
+
+        .navbar {
+            border-bottom: 1px solid #2d2d2d;
+        }
+
         body[data-bs-theme="dark"] .theme-switch:hover {
             background-color: rgba(255, 255, 255, 0.1);
         }
     </style>
 </head>
+
 <body class="bg-dark text-light" data-bs-theme="dark">
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark border-bottom border-secondary">
@@ -422,4 +428,5 @@
         });
     </script>
 </body>
+
 </html>
